file(GLOB EXAMPLE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
foreach(EXAMPLE_FILE ${EXAMPLE_FILES})
  get_filename_component(FILENAME ${EXAMPLE_FILE} NAME_WE)
  set(TARGETNAME geometry.example.${FILENAME})
  add_executable(${TARGETNAME} ${FILENAME}.cpp)
  target_link_libraries(geometry.example.${FILENAME} PUBLIC geometry)
  set_property(TARGET ${TARGETNAME} PROPERTY CXX_STANDARD 20)
endforeach()
